src/catalog/src/durable/upgrade/snapshots/mz_catalog__durable__upgrade__v44_to_v45__tests__sync_missing.snap
---
source: src/catalog/src/durable/upgrade/v44_to_v45.rs
expression: actions
---
[
    Insert(
        StateUpdateKind {
            kind: Some(
                Config(
                    Config {
                        key: Some(
                            ConfigKey {
                                key: "system_config_synced",
                            },
                        ),
                        value: Some(
                            ConfigValue {
                                value: 0,
                            },
                        ),
                    },
                ),
            ),
        },
    ),
]
